--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/nprogress": "^0.2.0",
+		"@types/sharp": "^0.32.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -36,8 +38,13 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/metropolis": "^5.0.1",
+		"@types/spotify-api": "^0.0.22",
 		"@unsass/breakpoint": "^2.3.0",
+		"lucide-svelte": "^0.223.0",
 		"modern-normalize": "^2.0.0",
-		"pkce-gen": "^1.1.0"
+		"nprogress": "^0.2.0",
+		"pkce-gen": "^1.1.0",
+		"sharp": "^0.32.1",
+		"tippy.js": "^6.3.7"
 	}
 }
